--- a/Makefile.config.example
+++ b/Makefile.config.example
@@ -12,10 +12,15 @@
 # USE_LEVELDB := 0
 # USE_LMDB := 0
 
+# to enable MLBP and FPGA offload,
+# remember to create libmlp.a as follows:
+# BNN-PYNQ/bnn/src/library/driver
+# g++ -std=c++11 -c platform-xlnk.cpp 
+# ar -cvq libmlbp.a platform-xlnk.o 
+
 # USE_MLBP := 1
 # MLBP_DRIVER_DIR := /home/xilinx/BNN-PYNQ/bnn/src/library/driver
-# MLBP_PLATFORM := platform-xlnk
-# MLBP_ADDITIONAL_LIBS := sds_lib
+# MLBP_ADDITIONAL_LIBS := mlbp sds_lib
 
 # uncomment to allow MDB_NOLOCK when reading LMDB files (only if necessary)
 #	You should not set this flag if you will be reading LMDBs with any
